[package]
name = "slint-spatial-focus"
version = "1.9.2-1.0.0"
authors = ["Danil Gulin <d.nk.gulin@gmail.com>"]
edition = "2021"
description = "Adds arrow key navigation to Slint UI"
repository = "https://github.com/dngulin/slint-spatial-focus"
license = "MIT"
readme = "README.md"
keywords = ["slint"]
categories = ["gui"]

[dependencies]
slint = "=1.9.2"
i-slint-core = "=1.9.2"